--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,14 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
     "@formspree/react": "^2.5.1",
+    "@mui/icons-material": "^6.0.1",
+    "@mui/material": "^6.0.1",
     "@reduxjs/toolkit": "^2.2.7",
-    "antd": "^5.20.1",
     "axios": "^1.7.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
-    "react-redux": "^9.1.2",
     "react-router-dom": "^6.25.1",
     "react-toastify": "^10.0.5"
   },
